CHANGELOG
=========

2018-03-10
----------

### check-anitya
* parallelization
* supports not redirected exact matches

### common
* conversion:
 * add Version class for parsing and comparison
 * add IntStr class for permissive conversions between int and str

2018-02-26
----------

### check-anitya
* Added initial code
* Finds project IDs itself

### common
* config: added config read function
* zypper: add package version parser