@@ -1,6 +1,15 @@
 CHANGELOG
 =========
 
+2018-03-11
+----------
+
+## branch-and-fix-license
+* Added initial code
+
+## license_rewriter
+* Added initial code
+
 2018-03-10
 ----------
 
